@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.1.2
+VERSION=1.1.3
 
-DEPENDENCY="zeda=1.2.4;zm=1.2.4"
+DEPENDENCY="zeda=1.2.13;zm=1.2.6"
